re PR other/66827 (left shifts of negative value warnings due to C++14 switch)

PR 66827
	* regex.c (EXTRACT_NUMBER): Cast sign byte to unsigned before left
	shifting.

From-SVN: r231873